[package]
name = "rp-rust-starter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"
test = false

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.5"
fugit = "0.3.7"
heapless = "0.8.0"
panic-probe = { version = "0.3.0", features = ["defmt"] }
rp-pico = "0.9.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"

